# BMI-203-final-nn

./: Autoencoder.ipynb  Classifier.ipynb  main.py  pyproject.toml
.github/workflows/: test.yml
nn/: __init__.py  nn.py  preprocess.py
test/: test_nn.py
