[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "hmm"
authors = [{name = "Shu Zhang", email = "zoe.chen2@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy" 
]

[project.urls]
Home = "https://github.com/zoechen0717/BMI-203-final-nn"